sizeSlider overflow issue resolved

--- a/app/globals.css
+++ b/app/globals.css
@@ -1587,18 +1587,22 @@ ul {
 }
 
 /*//////////////////////////////////////////////////////// SIZE SLIDER  ////////////////////////////////////////////////////////////*/
+.sizeSliderFather{
+  overflow: hidden;
+}
 .sizeSlider {
   width: max-content;
 
   .sliderCards {
     display: flex;
-    transition: 0.5s ease-in-out
+    transition: 0.5s ease-in-out;
+
   }
 
   .imageDiv {
     width: 100%;
     height: 30vw;
-    /* Fixed height for all images */
+    
   }
 
   .img {
@@ -1606,6 +1610,7 @@ ul {
     height: 30vw;
     width: fit-content;
     border-radius: 1.5vw;
+
   }
 
   .icon {
